Fri Jun 18 13:00:20 1993  Kevin Layer  (layer@sole)

	* modes.el: make mode line checking of "package: " more robust

	* keys.el: deal with comment-start being a regexp

	* subproc.el: print process separators on a line by themselves

	* site-init.el:
	* site-load.le: work in progress (to make eli loadable at build
	time)

===============================================================================
public release 2.0.5 (with acl 4.2.beta2.0 on sun4)
===============================================================================

Thu Apr 29 11:52:57 1993  Kevin Layer  (layer@sole)

>>>	* lep.el: new externals: fi:trace-definition and fi:gdb

	* clman.el: fix display of *clman* buffer

Thu Apr 15 15:32:12 1993  Kevin Layer  (layer@sole)

	* clman.el: fix defaulting of symbol in fi:clman

Mon Apr 12 09:36:15 1993  Kevin Layer  (layer@sole)

	* indent.el: add clim 2.x indent methods

===============================================================================
public release 2.0.4
===============================================================================

Fri Apr  9 08:09:23 1993  Kevin Layer  (layer@sole)

	* subproc.el: properly string-match $ for env variabie substitution

Tue Mar 23 10:08:35 1993  Kevin Layer  (layer@ice)

	* Makefile: testit rule

	* UserGuide.n: update

	* modes.el: move fi:in-package-regexp and
	fi:default-in-package-regexp to this file; set comment-column
	only when unbound;
>>>	fi:define-emacs-lisp-mode, default is `t'.

	* indent.el: change defclass indent spec

	* keys.el: comment

	* utils.el: fix fi::explode

	* subproc.el: fix directory tracking for relative pathnames

	* site-init.el: new variable fi::load-subprocess-files (default
	`t').

	* clman.el: totally revamped (uses OBLIST.el now)

===============================================================================
public release 2.0.3 (with ACL 4.1 on the HP700)
===============================================================================
